--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build && node ./scripts/stripCrossorigin.cjs",
+  "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
